@@ -131,6 +131,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8169. Move LocatedBlocks and related classes to hdfs-client. (wheat9)
 
+    HDFS-8133. Improve readability of deleted block check (Daryn Sharp via
+    Colin P. McCabe)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
